# spacetraders-cli

./: .gitignore  README.md  env.example  pyproject.toml
backend/src/traders/infraestructure/services/: space_traders_service.py
frontend/: config_direcciones.py  rxconfig.py
frontend/reflex.lock/: package.json
frontend/space_ui/: space_ui.py
frontend/space_ui/components/: card.py
frontend/space_ui/components/cards/: contract_card.py  fleet_card.py  shipyard_card.py  stat_card.py
frontend/space_ui/domain/: interfaces.py
frontend/space_ui/domain/entities/: contract.py
frontend/space_ui/infraestructure/services/: custom_trader.py
frontend/space_ui/presentation/: sidebar.py
frontend/space_ui/presentation/pages/: contract_ledger.py  dashboard.py  fleet_command.py  shipyard.py
frontend/space_ui/presentation/states/: contracts.py
src/traders/domain/entities/: system.py
