[project]
name = "api-spacetraders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "python-dotenv>=1.1.1",
    "reflex>=0.9.4",
    "requests>=2.32.4",
    "textual>=6.1.0",
]
